--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-wiggle-css />
-<app-wiggle-css-click />
-<app-wiggle-css-directive />
-<app-wiggle-ng-animations-1 />
-<app-wiggle-ng-animations-2 />
+<div class="main">
+  <app-wiggle-css />
+  <app-wiggle-css-click />
+  <app-wiggle-css-directive />
+  <app-wiggle-ng-animations-1 />
+  <app-wiggle-ng-animations-2 />
+</div>
